--- a/netflix/index.html
+++ b/netflix/index.html
@@ -54,8 +54,8 @@
   <main class="text-white bg-black">
 
     <!-- HEADER - LOGIN -->
-    <header class="h-0 pt-4 pb-3 px-5 flex justify-between items-center relative top-4 z-10">
-      <a href="https://www.netflix.com/br/" class="w-24 h-6">
+    <header class="h-0 pt-4 pb-3 px-5 flex justify-between items-center relative top-4 z-10 md:px-24 md:top-8">
+      <a href="https://www.netflix.com/br/" class="w-24 md:w-32">
         <svg viewBox="0 0 111 30" class="object-cover fill-red-600	" aria-hidden="true" focusable="false">
           <g id="netflix-logo">
             <path
